core/src/main/web/app/styles/cells.scss
/*
 *  Copyright 2014 TWO SIGMA OPEN SOURCE, LLC
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

@import "cell-menus";
@import "cell-errors";
@import "cell-outputs";

.bkcell .CodeMirror {
    background: transparent;
}

.bkcelltextarea {
    border: none;
    resize: none;
    font-family: monospace;
    padding-top: 19px;
    padding-left: 29px;
}

.mini-cell-stats {
    top: 22px;
    left: 20px;
    color: $font-grey;
    position: absolute;
    font-size: 12px;
}
.loading-state {
    color: $font-grey;
    font-size: 11px;
    line-height: 25px;
}

bk-section-cell, bk-markdown-cell {
  .codemirror-wrapper > .CodeMirror {
    font-family: inherit;
    line-height: inherit;
    color: inherit;

    pre {
      padding: 0;
    }
  }
}

bk-markdown-cell bk-markdown-editable {
  display: block;
}

bk-markdown-cell bk-markdown-editable, .bkcell.code-cell-area, .textcell-wrapper {
    border: solid 1px $cell-border;
    background-color: white;

    .locked & {
        border: solid 1px transparent;
    }
}

.textcell-wrapper,
bk-markdown-cell .CodeMirror-lines,
bk-markdown-cell .markup
{
    padding: $grid-row-height $grid-gutter-width;
}

.bkcell bk-code-cell-input-menu .dropdown {
    float:          left;
    z-index:        99;
    position:       relative;
    padding-bottom: $grid-row-height;
}

bk-cell > .bkcell {
    position: relative;
}

bk-section-cell {
    display: block;
    margin: $grid-row-height 0;
}

.editable-text {
    outline: none;
    // contenteditable requires manual override
    font: $font-size-base $font-family-sans-serif;
    line-height: $line-height-base;
    white-space: pre;
}

.bkcell bk-code-cell-input-menu .dropdown .dropdown-menu {
    margin-top: -$grid-row-height;
}

.code-cell-area {
    .code-cell-input {
        padding: $grid-row-height*2 $grid-gutter-width $grid-row-height;

        .advanced-mode & {
            padding-top: $grid-row-height;

            &.input-hidden {
                padding-top: $grid-row-height*2;
            }
        }

        &.input-hidden .code-cell-input-content {
            display: none;
        }
    }

    .code-cell-output {
        padding: $grid-row-height $grid-gutter-width;
        position: relative;
        border-top: solid 1px #CCC;
        box-sizing: content-box;

        .out_error {
            padding-bottom: 0;

            .advanced-mode & {
                padding-top: 0;
            }
        }

        .advanced-mode &.no-output .cell-menu-item {
            display: none;
        }

        .bkcell {
            margin-bottom: 0;
        }

        &.error {
            border: 1px solid $error_red;
            margin: -1px;
        }
    }
}

bk-code-cell .locked .code-cell-output {
    border: none;
    margin-top: 0;
}

bk-output-display pre {
    border:     none;
    margin:     0;
    padding:    0;
    overflow:   visible;
    line-height: 1;
    background: transparent;
}

.code-cell-hidden {
    padding-top: $grid-row-height;
}

bk-cell .section > .toggle-menu {
    top: 0;
}

.toggle-menu {
    bk-language-logo {
        display: none;
        position: relative;
        top: 1px;
        margin-right: 5px;
    }
}

.advanced-mode {
    bk-language-logo {
        display: none;
    }

    .toggle-menu  bk-language-logo {
        display: inline-block;
    }
}

bk-language-logo {
  position: absolute;
  left: 0;
  top: 0;

  span {
    width: 20px;
    height: 20px;
    line-height: 20px;
    font-weight: bold;
    text-align: center;
    display: inline-block;
    vertical-align: middle;
    font-size: 10px;
    padding-top: 1px;
  }
}

.cell-run-time {
color: #BDBDBD;
}

